# chakshu-distribution

./: .gitignore  app.py  build_script.py  pyproject.toml
web/: controller.js  index.html  main.js  script.js
