[project]
name = "chakshu-distribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eel>=0.17.0",
    "numpy>=2.1.3",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pyttsx3>=2.98",
    "openwakeword==0.6.0",
    "speechrecognition[whisper-local]",
    "soundfile>=0.12.1",
]
